01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak-namespace
  labels:
    name: keycloak-namespace
    app: keycloak
