04-keycloak.yaml
---
# Service для Keycloak
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak-namespace
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443

---
# Deployment для Keycloak
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: keycloak-namespace
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.3.1
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - name: keycloak-storage
              mountPath: /opt/keycloak/data
            - name: realm-config-volume
              mountPath: /opt/keycloak/data/import
          args: ["start", "--import-realm"]
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
      volumes:
        - name: keycloak-storage
          persistentVolumeClaim:
            claimName: keycloak-pvc
        - name: realm-config-volume
          configMap:
            name: keycloak-realm-config
