ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-registry-ingress
  namespace: model-registry
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: model-registry
                port:
                  number: 8008
